--- a/admin/src/ui/Users/users.css
+++ b/admin/src/ui/Users/users.css
@@ -2,6 +2,70 @@
     padding: 50px 45px 0 45px;
     background: #f6f6fa;
     max-width: 100%;
-    width: calc(100vw - 440px);
-    height: calc(100vh - 171px);
+    width: calc(100vw - 410px);
+    height: auto;
+}
+
+.UserStatus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.UserStatus select {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    border-radius: 24px;
+    border: 1px solid rgba(132, 146, 175, 0.3);
+    background-color: transparent;
+    background: url('img/arrow.png') no-repeat  90% center;
+    text-indent: 0.01px;
+    text-overflow: '';
+    padding-left: 20px;
+    outline: none;
+    appearance: none;
+    font-size: 14px;
+    font-weight: 700;
+    color: #0e1a35;
+}
+
+.UsersGeneral {
+    color: #0e1a35;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 16px;
+}
+
+.UsersGeneral span {
+    color: #8492af;
+}
+
+
+.UsersList {
+    margin-bottom: 50px;
+}
+
+.UsersList  > li {
+    max-width: 1500px;
+    width: 100%;
+    background: #fff;
+    border: 1px solid rgba(132, 146, 175, 0.3);
+    border-bottom: none;
+}
+
+.UsersList > li:last-child {
+    border-bottom: 1px solid rgba(132, 146, 175, 0.3);
+}
+
+.UserName {
+    max-width: 350px;
+    width: 100%;
+    margin-left: 35px;
+}
+
+.UsersListInfo {
+    display: flex;
+    align-items: center;
 }
