--- a/admin/src/components/pages/Users.css
+++ b/admin/src/components/pages/Users.css
@@ -20,7 +20,7 @@
     border-radius: 24px;
     border: 1px solid rgba(132, 146, 175, 0.3);
     background-color: transparent;
-    background: url('img/arrow.png') no-repeat  90% center;
+    background: url('../../assets/img/arrow.png') no-repeat  90% center;
     text-indent: 0.01px;
     text-overflow: '';
     padding-left: 20px;
@@ -45,27 +45,4 @@
 
 .UsersList {
     margin-bottom: 50px;
-}
-
-.UsersList  > li {
-    max-width: 1500px;
-    width: 100%;
-    background: #fff;
-    border: 1px solid rgba(132, 146, 175, 0.3);
-    border-bottom: none;
-}
-
-.UsersList > li:last-child {
-    border-bottom: 1px solid rgba(132, 146, 175, 0.3);
-}
-
-.UserName {
-    max-width: 350px;
-    width: 100%;
-    margin-left: 35px;
-}
-
-.UsersListInfo {
-    display: flex;
-    align-items: center;
 }
