--- a/admin/src/components/organisms/LeftBar.css
+++ b/admin/src/components/organisms/LeftBar.css
@@ -5,9 +5,11 @@
 
 .SideMenu {
     background: #1c1839;
-    height: auto;
+    min-height: calc(100vh + 223px);
     max-width: 320px;
     width: 100%;
+    float: left;
+    overflow: hidden;
 }
 
 
