--- a/admin/src/components/organisms/ToDoListItem.css
+++ b/admin/src/components/organisms/ToDoListItem.css
@@ -2,11 +2,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 390px;
-    width: 100%;
+    width: 390px;
+    max-width: 100%;
     padding: 0 35px;
     height: 120px;
     background: #fff;
     margin-bottom: 15px;
     border: 1px solid rgba(132, 146, 175, 0.3);
+    transition: all .4s;
+}
+
+.ToDoListItem:hover {
+    transform: scale(1.05);
+}
+
+.ToDoListItem:hover .TaskName {
+    transform: rotate(360deg);
 }
