Project done without responsive

--- a/admin/src/components/atoms/Buttons/DetailButton.css
+++ b/admin/src/components/atoms/Buttons/DetailButton.css
@@ -2,6 +2,6 @@
     width: 7px;
     height: 33px;
     border: none;
-    background: url("../../assets/img/options.png") no-repeat;
+    background: url("../../../assets/img/options.png") no-repeat;
 
 }
