--- a/admin/src/components/pages/Statistics.css
+++ b/admin/src/components/pages/Statistics.css
@@ -1,4 +1,4 @@
-.Users {
+.StatisticsPage {
     padding: 50px 45px 100px 43px;
     background: #f6f6fa;
     max-width: 100%;
@@ -7,15 +7,21 @@
     margin-left: 320px;
 }
 
-.UserStatus {
+.StatisticControlPanel {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    margin-bottom: 80px;
+    align-items: center;
+    margin-bottom: 35px;
 }
 
-.UserStatus select {
-    position: relative;
+.StatisticControlPanel p {
+    color: #0e1a35;
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 14px;
+}
+
+.Type, .Period {
     width: 200px;
     height: 50px;
     border-radius: 24px;
@@ -32,18 +38,13 @@
     color: #0e1a35;
 }
 
-.UsersGeneral {
-    color: #0e1a35;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 16px;
+.Period {
+    margin-right: 30px;
 }
-
-.UsersGeneral span {
-    color: #8492af;
-}
-
-
-.UsersList {
-    margin-bottom: 50px;
+.StatsInfo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
 }
