--- a/admin/src/components/organisms/LeftBar.css
+++ b/admin/src/components/organisms/LeftBar.css
@@ -4,8 +4,9 @@
 }
 
 .SideMenu {
+    position: fixed;
     background: #1c1839;
-    min-height: calc(100vh + 253px);
+    min-height: calc(100vh - 121px);
     max-width: 320px;
     width: 100%;
     float: left;
@@ -114,5 +115,18 @@
     width: 21px;
     background: url(../../assets/img/settings-icon.png) no-repeat;
     margin-right: 10px;
+}
+
+
+.ActiveLink::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    left: 0;
+    width: 10px;
+    background: #5584ff;
 }
 
