--- a/admin/src/components/organisms/TopBar.css
+++ b/admin/src/components/organisms/TopBar.css
@@ -11,14 +11,18 @@
 .LeftPanel {
     display: flex;
     align-items: center;
+    margin-left: 355px;
 }
 
 .Logo {
+    position: fixed;
     background: #1c1839;
     width: 320px;
     height: inherit;
     margin-right: 50px;
     padding: 34px 0;
+    display: flex;
+    align-items: center;
 }
 
 .Logo img {
