--- a/admin/src/components/pages/Statistics.css
+++ b/admin/src/components/pages/Statistics.css
@@ -1,5 +1,5 @@
 .StatisticsPage {
-    padding: 50px 45px 100px 43px;
+    padding: 50px 45px 100px 45px;
     background: #f6f6fa;
     max-width: 100%;
     width: calc(100vw - 425px);
@@ -47,4 +47,36 @@
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: 40px;
+}
+
+/*
+    Responsive
+ */
+
+@media screen and (max-width: 1440px){
+    .StatsInfo {
+        justify-content: center;
+    }
+
+    .StatsInfo .StatsLIst {
+        margin-bottom: 25px;
+    }
+
+    .TotalSalesList {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .TotalSalesList li {
+        margin-bottom: 35px;
+    }
+
+    .TotalSalesList li:last-child {
+        margin-bottom: 0;
+    }
+
+    .StatisticsPage .TotalSales {
+        margin: 0 auto;
+        width: 85%;
+    }
 }
