--- a/admin/src/components/organisms/Registratiom.css
+++ b/admin/src/components/organisms/Registratiom.css
@@ -1,33 +1,33 @@
-.Login {
+.Registration {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 100px 0;
 }
 
-.Login h2 {
+.Registration h2 {
     color: #8492af;
     font-size: 48px;
     font-weight: 300;
     margin-bottom: 70px;
 }
 
-.Login h2 span {
-    color: #5384ff;
-}
-
-.Login .UsersField {
-    margin-bottom: 20px;
-}
-
-.Login .EnterButton {
-    margin-top: 50px;
-}
-
-.LoginForm {
+.RegistrationForm {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.Registration h2 span {
+    color: #5384ff;
+}
+
+.Registration .UsersField {
+    margin-bottom: 20px;
+}
+
+.Registration .EnterButton {
+    margin-top: 50px;
 }
 
 /*
@@ -35,11 +35,11 @@
  */
 
 @media screen and (max-width: 1440px) {
-    .Login {
+    .Registration {
         padding: 50px 0;
     }
 
-    .Login h2 {
+    .Registration h2 {
         margin-bottom: 50px;
     }
 }
