--- a/admin/src/components/pages/AuthorizationPage.css
+++ b/admin/src/components/pages/AuthorizationPage.css
@@ -4,6 +4,7 @@
     background: url("../../assets/img/auth-background.png") no-repeat;
     background-size: 100% 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 139px rgba(147, 161, 185, 0.59);
@@ -16,12 +17,178 @@
     height: auto;
 }
 
+.AuthorizationPanel {
+    height: 145px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #1c1839;
+    max-width: 1200px;
+    width: 100%;
+}
+
+.LogoMerc {
+    margin-left: 45px;
+}
+
+.AuthPanel{
+    display: flex;
+}
+
+.AuthorizationPanel li {
+    cursor: pointer;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: 500;
+    position: relative;
+}
+
+
+.AuthorizationPanel .LoginLink {
+    padding: 0 50px;
+}
+
+.AuthorizationPanel .RegisterLink {
+    padding: 0 50px;
+}
+
+.LoginLink::before {
+    content: "";
+    position: absolute;
+    height: 10px;
+    background-color: #5584ff;
+    left: 0;
+    right: 0;
+    top: 75px;
+}
+
+.UsersField {
+    width: 500px;
+    padding: 15px 0 15px 50px;
+    margin: 0px auto 0 auto;
+    border: none;
+    background: transparent url("../../assets/img/users-field.png") no-repeat;
+    border-bottom: 1px solid #8492af;
+    background-position: left 30%;
+    transition: all .4s;
+    color: #8492af;
+    font-size: 24px;
+}
+
+.UsersField:focus {
+    border-bottom: 1px solid #7a4fff;
+}
+
+
+
+.UsersField::-webkit-input-placeholder {
+    color: #8492af;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 56px;
+}
+
+.UsersField:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+.PasswordField {
+    width: 500px;
+    padding: 15px 0 15px 50px;
+    margin: 0 auto 0 auto;
+    border: none;
+    background: transparent url("../../assets/img/password-icon.png") no-repeat;
+    border-bottom: 1px solid #8492af;
+    background-position: left 40%;
+    transition: all .4s;
+    color: #8492af;
+    font-size: 24px;
+}
+
+.PasswordField:focus {
+    border-bottom: 1px solid #7a4fff;
+}
+
+
+
+.PasswordField::-webkit-input-placeholder {
+    color: #8492af;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 56px;
+}
+
+.PasswordField:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+.EmailField {
+    width: 500px;
+    padding: 15px 0 15px 50px;
+    margin: 25px auto 0 auto;
+    border: none;
+    border-bottom: 1px solid #8492af;
+    background: transparent;
+    transition: all .4s;
+    color: #8492af;
+    font-size: 24px;
+}
+
+.EmailInput {
+    position: relative;
+}
+
+.EmailIcon {
+    font-family: 'FontAwesome', sans-serif;
+    position: absolute;
+    display: inline-block;
+    color: #7950ff;
+    font-size: 22px;
+    left: 0;
+    top: 50%;
+}
+
+.EmailField:focus {
+    border-bottom: 1px solid #7a4fff;
+}
+
+
+
+.EmailField::-webkit-input-placeholder {
+    color: #8492af;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 56px;
+}
+
+.EmailField:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+/*
+    Responsive
+ */
+
+@media screen and (max-width: 1440px) {
+    .AuthorizationPanel {
+        height: 100px;
+    }
+
+    .LoginLink::before {
+        top: 54px;
+    }
+}
 /*
     Responsive
  */
 
 @media screen and (max-width: 1440px) {
     .Authorization {
+        max-width: 800px;
+    }
+
+    .AuthorizationPanel {
         max-width: 800px;
     }
 }
