--- a/admin/src/components/organisms/TopBar.css
+++ b/admin/src/components/organisms/TopBar.css
@@ -100,6 +100,7 @@
     color: #0e1a35;
     transition: all .6s;
     margin-right: 30px;
+    cursor: pointer;
 }
 
 .RightPanel .MessagesLink:hover {
@@ -116,6 +117,7 @@
     text-decoration: none;
     color: #0e1a35;
     transition: all .6s;
+    cursor: pointer;
 }
 
 
@@ -164,12 +166,11 @@
     align-items: center;
 }
 
-.Person::after {
+.DropButton {
     display: inline-block;
-    content: "";
     width: 12px;
     height: 7px;
-    background: url(../../assets/img/triangle-down-icon.png) no-repeat;
-    margin-left: 10px;
     cursor: pointer;
+    background: url(../../assets/img/triangle-down-icon.png) no-repeat;
+    border: none;
 }
