--- a/admin/src/components/organisms/UserListItem.css
+++ b/admin/src/components/organisms/UserListItem.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     border-right: 1px solid rgba(132, 146, 175, 0.3);
+    padding: 0 10px;
 }
 
 .UsersListInfo li:last-child {
@@ -14,7 +15,7 @@
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    margin-right: 35px;
+    margin-right: 25px;
     position: relative;
 }
 
