--- a/admin/src/components/organisms/HomeActiveSales.css
+++ b/admin/src/components/organisms/HomeActiveSales.css
@@ -6,15 +6,20 @@
     border: 1px solid rgba(132, 146, 175, 0.3);
 }
 
-.HomeActiveSales .GraphImg {
-    position: relative;
-    max-width: 100%;
-    width: 100%;
-    overflow: hidden;
-}
 
-.GraphState {
-    width: 100%;
-    position: absolute;
-    top: 11%;
+.HomeActiveSales select {
+    width: 200px;
+    height: 50px;
+    border-radius: 24px;
+    border: 1px solid rgba(132, 146, 175, 0.3);
+    background-color: transparent;
+    background: url('../../assets/img/arrow.png') no-repeat  90% center;
+    text-indent: 0.01px;
+    text-overflow: '';
+    padding-left: 20px;
+    outline: none;
+    appearance: none;
+    font-size: 14px;
+    font-weight: 700;
+    color: #0e1a35;
 }
