--- a/admin/src/components/organisms/InfoSalesCard.css
+++ b/admin/src/components/organisms/InfoSalesCard.css
@@ -6,6 +6,7 @@
     border: 1px solid rgba(132, 146, 175, 0.3);
 }
 
+
 .InfoSalesCard select {
     width: 200px;
     height: 50px;
@@ -21,4 +22,19 @@
     font-size: 14px;
     font-weight: 700;
     color: #0e1a35;
+}
+
+.HomeSortPanel {
+    max-width: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.HomeSortPanel .CategoryPanel {
+    color: #8492af;
+    font-size: 36px;
+    font-weight: 700;
 }
