--- a/admin/src/components/pages/Statistics.css
+++ b/admin/src/components/pages/Statistics.css
@@ -21,7 +21,7 @@
     line-height: 14px;
 }
 
-.Type, .Period {
+.StatisticsPage select {
     width: 200px;
     height: 50px;
     border-radius: 24px;
@@ -36,11 +36,9 @@
     font-size: 14px;
     font-weight: 700;
     color: #0e1a35;
+    margin-right: 10px;
 }
 
-.Period {
-    margin-right: 30px;
-}
 .StatsInfo {
     display: flex;
     justify-content: space-between;
@@ -49,6 +47,32 @@
     margin-bottom: 40px;
 }
 
+.ActiveUsers {
+    max-width: 830px;
+    width: 100%;
+    height: auto;
+    background: #fff;
+    padding: 30px;
+    border: 1px solid rgba(132, 146, 175, 0.3);
+}
+
+.ActiveUsers:hover .ActiveUsersPanel>h3 {
+    color: #0b0a10;
+}
+
+.ActiveUsersPanel {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 35px;
+}
+
+.ActiveUsersPanel h3 {
+    color: #8492af;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 14px;
+}
 /*
     Responsive
  */
