--- a/admin/src/components/pages/Users.css
+++ b/admin/src/components/pages/Users.css
@@ -1,16 +1,20 @@
 .Users {
-    padding: 50px 45px 100px 45px;
+    padding: 50px 43px 100px 45px;
     background: #f6f6fa;
     max-width: 100%;
     width: calc(100vw - 425px);
     min-height: calc(100vh + 103px);
     margin-left: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .UserStatus {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    align-self: stretch;
     margin-bottom: 80px;
 }
 
@@ -44,7 +48,204 @@
 }
 
 
-.UsersList {
-    margin-bottom: 50px;
+.UsersTableTableCell{
+    display: flex;
+    align-items: center;
+    min-height: 120px;
+    padding-left: 40px;
+    background: #fff;
+    border-right: 1px solid #dddddd;
 }
+
+.react-bs-table {
+    margin: 0 auto!important;
+    width: 100%;
+}
+
+
+.UsersTableTableCell a {
+    text-decoration: none;
+}
+
+.UsersTableTableCell.Menu{
+    padding-right: 40px;
+    justify-content: center;
+}
+
+
+.table.table-bordered>tbody>tr{
+    border: 1px solid #ddd;
+    border-right: none;
+}
+
+
+.react-bs-table .table-bordered>tbody>tr>td{
+    padding: 0;
+}
+
+.react-bs-table .table-bordered>thead>tr:first-child>td, .react-bs-table .table-bordered>thead>tr:first-child>th{
+    font:400 20px/14px Roboto;
+    color:#8492af;
+    padding-bottom: 11px;
+    padding-left: 80px;
+}
+
+.ProfilePhotoWrap{
+    overflow: hidden;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background: #c7c7c7;
+    z-index: 10;
+    margin-right: 33px;
+}
+
+.ProfilePhotoWrap img{
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.ProfileInfoWrap{
+    position: relative;
+}
+
+.Online{
+    position: absolute;
+    background:#00bf1b;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border:3px solid #fff;
+    top:5px;
+    right: 33px;
+    z-index: 100;
+    box-sizing: content-box;
+}
+
+.Offline{
+    position: absolute;
+    background:#c7c7c7;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border:3px solid #fff;
+    top:5px;
+    right: 33px;
+    z-index: 100;
+    box-sizing: content-box;
+    display: none;
+}
+
+.ProfileName{
+    display: block;
+    font:500 20px/14px Roboto;
+    color:#0e1a35;
+    margin-bottom: 10px;
+}
+
+.ProfileProf{
+    font:400 20px/14px Roboto;
+    color:#8492af;
+    margin-bottom: 0;
+}
+
+.ActivityStatus{
+    font:500 14px/12px Roboto;
+}
+
+.ActivityStatus::before{
+    transform: translateY(-50%);
+    margin-right: 10px;
+    content:'\f017';
+    font-family: FontAwesome;
+    font-size: 24px;
+}
+
+.OnlineActive{
+    color:#00bf1b;
+}
+
+.OfflineActive{
+    color:#8492af;
+}
+
+.UsersTableTableCell .email{
+    font:500 14px/12px Roboto;
+    color:#0e1a35;
+}
+
+.UsersTableTableCell .tel{
+    font:500 14px/12px Roboto;
+    color:#0e1a35;
+}
+
+.UsersTable-Body{
+    margin-bottom: 60px!important;
+}
+
+.react-bs-table-pagination{
+    margin-right:50%;
+}
+
+.page-link{
+    color:#000;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.page-item:last-of-type{
+    display: none;
+}
+
+.pagination{
+    display: flex;
+    align-items: center;
+
+    padding: 0;
+}
+
+.pagination li {
+    padding: 10px;
+    border: 1px solid #dddddd!important;
+    background: #ffffff;
+}
+
+.pagination:not(:nth-child(1)) {
+    border-left: none !important;
+}
+
+
+
+.page-item{
+    border: 1px solid transparent!important;
+}
+
+.page-item:focus{
+    outline: none;
+    box-shadow: none;
+}
+
+.pagination .active a{
+    color: #5584ff;
+}
+
+.pagination .active::after{
+    display: none;
+}
+
+.page-link:focus{
+    box-shadow: none!important;
+}
+
+.pagination li[title="next page"],.pagination li[title="previous page"], .pagination li[title="first page"], .pagination li[title="last page"]  {
+    border: none!important;
+    background: transparent;
+}
+
+.pagination li[title="next page"]>a , .pagination li[title="previous page"]>a, .pagination li[title="first page"]>a, .pagination li[title="last page"]>a {
+    color: #5584ff;
+    font-size: 24px;
+}
+
 
