--- a/admin/src/components/organisms/InfoSalesCard.css
+++ b/admin/src/components/organisms/InfoSalesCard.css
@@ -4,6 +4,8 @@
     padding: 30px 35px 45px 35px;
     background: #ffffff;
     border: 1px solid rgba(132, 146, 175, 0.3);
+    margin-right: 25px;
+    height: auto;
 }
 
 
