--- a/admin/src/components/organisms/TopBar.css
+++ b/admin/src/components/organisms/TopBar.css
@@ -2,31 +2,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 100%;
+    max-width: calc(100% - 80px);
     width: 100%;
     height: 120px;
     border-bottom: 1px solid rgba(132, 146, 175, 0.3);
+    padding: 0 40px;
+
 }
 
 .LeftPanel {
     display: flex;
     align-items: center;
-    margin-left: 355px;
+    transition: margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    margin: 0;
 }
 
-.Logo {
-    position: fixed;
-    background: #1c1839;
-    width: 320px;
-    height: inherit;
-    margin-right: 50px;
-    padding: 34px 0;
-    display: flex;
-    align-items: center;
+.MarginLeft {
+    margin-left: 300px;
 }
 
-.Logo img {
-    margin-left: 35px;
+.Drawer {
+    background: #1c1839!important;
+
+}
+
+.Drawer>div>div {
+    padding: 0!important;
 }
 
 .TopMenu .SearchButton {
@@ -49,7 +50,7 @@
     margin-right: 35px;
 }
 
-.BurgerButton::before {
+.HiddenIcon::before {
     content: "";
     position: absolute;
     left: -10px;
@@ -63,7 +64,7 @@
 .RightPanel {
     display: flex;
     align-items: center;
-    margin-right: 50px;
+
 }
 
 .RightPanel .AddProject {
