--- a/admin/src/components/pages/Statistics.css
+++ b/admin/src/components/pages/Statistics.css
@@ -1,10 +1,15 @@
 .StatisticsPage {
-    padding: 50px 43px 100px 45px;
+    padding: 50px 45px 100px 45px;
     background: #f6f6fa;
     max-width: 100%;
-    width: calc(100vw - 425px);
+    width: calc(100% - 90px);
     min-height: calc(100vh + 103px);
-    margin-left: 320px;
+}
+
+.StatsLIst {
+    margin-right: 30px;
+    max-width: 480px;
+    width: 100%;
 }
 
 .StatisticControlPanel {
@@ -48,7 +53,7 @@
 }
 
 .ActiveUsers {
-    max-width: 830px;
+    max-width: 700px;
     width: 100%;
     height: auto;
     background: #fff;
@@ -77,7 +82,7 @@
     Responsive
  */
 
-@media screen and (max-width: 1880px){
+@media screen and (max-width: 1360px){
     .StatsInfo {
         justify-content: center;
     }
