--- a/admin/src/components/pages/Users.css
+++ b/admin/src/components/pages/Users.css
@@ -1,10 +1,9 @@
 .Users {
-    padding: 50px 43px 100px 45px;
+    padding: 50px 45px 100px 45px;
     background: #f6f6fa;
     max-width: 100%;
-    width: calc(100vw - 425px);
+    width: calc(100% - 90px);
     min-height: calc(100vh + 103px);
-    margin-left: 320px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,8 +13,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    align-self: stretch;
     margin-bottom: 80px;
+    width: 100%;
 }
 
 .UserStatus select {
