--- a/admin/src/components/pages/Calendar.css
+++ b/admin/src/components/pages/Calendar.css
@@ -5,4 +5,10 @@
     width: calc(100% - 90px);
     min-height: calc(100vh - 196px);
     flex: 1;
+    transition: margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+
+.CalendarPageActive {
+    margin-left: 320px;
+    width: calc(100% - 410px);
 }
