--- a/admin/src/components/pages/HomePage.css
+++ b/admin/src/components/pages/HomePage.css
@@ -3,7 +3,12 @@
     background: #f6f6fa;
     max-width: 100%;
     width: calc(100% - 90px);
+    transition: margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
 
+.HomePageActive {
+    margin-left: 320px;
+    width: calc(100% - 410px);
 }
 
 .HomePage > h3 {
