--- a/admin/src/components/pages/Statistics.css
+++ b/admin/src/components/pages/Statistics.css
@@ -4,10 +4,16 @@
     max-width: 100%;
     width: calc(100% - 90px);
     min-height: calc(100vh + 103px);
+    transition: margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+
+.StatisticsPageActive {
+    margin-left: 320px;
+    width: calc(100% - 410px);
 }
 
 .StatsLIst {
-    margin-right: 30px;
+    margin: 0 30px 25px 0;
     max-width: 480px;
     width: 100%;
 }
@@ -46,7 +52,7 @@
 
 .StatsInfo {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: 40px;
