--- a/admin/src/components/pages/Users.css
+++ b/admin/src/components/pages/Users.css
@@ -7,6 +7,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+
+}
+
+.UsersActive {
+    margin-left: 320px;
+    width: calc(100% - 410px);
 }
 
 .UserStatus {
