--- a/admin/src/components/pages/Workflow.css
+++ b/admin/src/components/pages/Workflow.css
@@ -3,10 +3,16 @@
     background: #f6f6fa;
     max-width: 100%;
     width: calc(100% - 90px);
-    min-height: calc(100vh + 103px);
+    min-height: calc(100vh - 281px);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    transition: margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+
+.WorkflowPageActive {
+    margin-left: 320px;
+    width: calc(100% - 410px);
 }
 
 .Category, .CategoryCompleted {
