--- a/admin/src/components/pages/Workflow.css
+++ b/admin/src/components/pages/Workflow.css
@@ -1,5 +1,5 @@
 .WorkflowPage {
-    padding: 50px 40px 100px 45px;
+    padding: 50px 45px 100px 45px;
     background: #f6f6fa;
     max-width: 100%;
     width: calc(100% - 90px);
@@ -46,6 +46,24 @@
 
 .ToDoCategory, .ToDoInProgress, .ToDoCompleted {
     margin-bottom: 40px;
+}
+
+.dJewwL {
+    background: transparent;
+}
+
+.ijaWEf {
+    max-width: 350px!important;
+    min-width: 0;
+}
+
+.lfgZPS {
+    max-width: 350px;
+    width: 350px;
+}
+
+.sc-bdVaJa {
+    flex-wrap: wrap;
 }
 
 /*
